# friendlydispute

./: .gitignore  README.md
.github/workflows/: default-ci.yml
backend/: pyproject.toml  requirements.txt  run_api.py  settings.py
backend/api/: app.py  dependencies.py  exception_handlers.py  lifetime.py
backend/api/routes/: dispute.py
backend/core/: nlp.py  types.py
backend/tests/: conftest.py
backend/tests/test_api/: test_dispute.py
contracts/: .env.example  hardhat.config.js  package.json  pnpm-lock.yaml
contracts/chainlink-adapter/: index.js  package.json
contracts/contracts/: DisputeEscrow.sol
contracts/scripts/: deploy.js  fund-test-wallet.js
contracts/test/: DisputeEscrow.js
frontend/: package.json  pnpm-lock.yaml  tailwind.config.mjs
frontend/app/: config.js  globals.css  layout.js  page.js
frontend/app/api/resolve/: route.js
frontend/app/api/resolve-dispute/: route.js
frontend/app/components/: ClientPage.js  DisputeForm.js  Header.js  Providers.js
frontend/app/contracts/: DisputeEscrow.json
frontend/app/disputes/: page.js
