[tool.poetry]
name = "friendlydispute"
version = "0.1.0"
description = "backend for friends arguing"
authors = ["Adam Cohen Hillel","Danny Hunt"]
license = "UNLICENSED"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.78.0"
pydantic = "1.9.1"
python-jose = {version = "3.3.0", extras = ["cryptography"]}
python-multipart = "0.0.5"
ujson = "5.4.0"
uvicorn = {version = "0.19.0", extras = ["standard"]}
passlib = {version = "1.7.4", extras = ["bcrypt"]}
openai = "0.18.0"
sqlalchemy = {version = "1.4.39", extras = ["asyncio"]}
asyncpg = "0.26.0"
pytest = "7.1.2"
pytest-asyncio = "0.18.3"
httpx = "0.23.0"
flake8 = "4.0.1"

[tool.pytest.ini_options]
asyncio_mode="strict"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
